<resources>
    <string name="app_name" translatable="false">Quited</string>
    <string name="end_amount">Desired amount per day</string>
    <string name="day_end">Day end</string>
    <string name="day_start">Day start</string>
    <string name="days_amount">Days amount</string>
    <string name="create_plan">Create plan</string>
    <string name="timer">Timer</string>
    <string name="settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="start_time">Pick a start time</string>
    <string name="start_date">Plan start</string>
    <string name="end_time">Pick an end time</string>
    <string name="your_plan">Your plan</string>
    <string name="plan_saved">Plan was saved</string>
    <string name="day_number">Day %s</string>
    <string name="ciggs">%s/%s</string>
    <string name="plan">Plan</string>
    <string name="real">Real</string>
    <string name="no_plan">No plan</string>
    <string name="today">Today</string>
    <string name="cigg_saved">Smoking saved</string>
    <string name="undo">Undo</string>
    <string name="you_can_smoke">You can</string>
    <string name="start_amount">Cigarettes per day</string>
    <string name="notifications">Notifications</string>
    <string name="smoke_time_1" translatable="false">Tic tac mf</string>

</resources>